--- a/hw10/index.html
+++ b/hw10/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,6 +45,12 @@
             border-radius: 5px;
             border: 1px solid #ccc;
             margin-bottom: 20px;
+        }
+
+        #translationOutput {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
         }
     </style>
 </head>
