--- a/hw6.2/index.html
+++ b/hw6.2/index.html
@@ -55,7 +55,7 @@
     <button class="toggle-btn" id="toggleBtn">☰</button>
     <div class="content" id="content">
         <h1>歡迎來到我的網站</h1>
-        <p>這是一個使用 JavaScript 實現的可展開縮放的側欄。</p>
+        <p>這是一個側欄網站。</p>
     </div>
     <script src="script.js"></script>
 </body>
